--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <img src="./assets/player.png" id="player">
     <img src="./assets/enemy.png" id="enemy">
     <img src="./assets/bullet.png" id="bullet">
+    <img src="./assets/enemyBullet.png" id="enemyBullet">
     <img src="./assets/background.png" id="background">
     <script src="script.js"></script>
 </body>
