--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <img src="./assets/bullet.png" id="bullet">
     <img src="./assets/enemyBullet.png" id="enemyBullet">
     <img src="./assets/background.png" id="background">
+    <img src="./assets/boom.png" id="cloud_sprite">
     <script src="script.js"></script>
 </body>
 </html>
